--- a/ninja-express/views/profile.ejs
+++ b/ninja-express/views/profile.ejs
@@ -1,31 +1,18 @@
 <head>
-  <style>
-    body {
-      background: skyblue;
-      font-family: verdana;
-      color: #fff;
-      padding: 30px;
-    }
-
-    h1 {
-      font-size: 48px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      text-align: center;
-    }
-
-    p {
-      font-size: 16px;
-      text-align: center;
-    }
-  </style>
   <title>Document</title>
 </head>
 
 <body>
+  <%- include ('partials/nav') %>
   <h1>Welcome to the profile of <%= person %> </h1>
   <p><strong>Age: <%= data.age %> </strong></p>
   <p><strong>Job: <%= data.job %> </strong></p>
+  <h2>Hobbies</h2>
+  <ul>
+    <% data.hobbies.forEach(hobby => { %>
+    <li><%= hobby %> </li>
+    <%}) %>
+  </ul>
 </body>
 
 </html>
