--- a/ninja-express/views/contact.ejs
+++ b/ninja-express/views/contact.ejs
@@ -2,12 +2,25 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="/assets/styles.css">
   <title>Document</title>
 </head>
 
 <body>
+  <%- include ('partials/nav') %>
   <h1>Contact US</h1>
   <p>Contact the colest ninjas on the web!</p>
+  <!-- <p><%= q.dept %></p> -->
+
+  <form id="contact-form" method="POST" action="/contact">
+    <label for="who">Who do you want to contact?</label>
+    <input type="text" name="who" value="<%= q.person %>">
+    <label for="department">Which department?</label>
+    <input type="text" name="department" value="<%= q.dept %>">
+    <label for="email">Your email</label>
+    <input type="email" name="email">
+    <input type="submit" value="submit">
+  </form>
 </body>
 
 </html>
