--- a/ninja-express/views/contact-success.ejs
+++ b/ninja-express/views/contact-success.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/assets/styles.css">
-  <title>Document</title>
+  <title>Contact US</title>
 </head>
 
 <body>
